# sandevistan-ai

./: .gitignore  README.md  fallow_analysis_result.json  index.html  install-debian-ubuntu.sh  install-fedora.sh  package-lock.json  package.json  vite.config.ts
.github/packaging/linux/: README.md  install.sh  sandevistan  sandevistan.desktop
.github/workflows/: release.yml
crates/sandevistan-core/: Cargo.toml  README.md
crates/sandevistan-core/src/: config.rs  context.rs  lib.rs  message.rs  mods.rs  provider.rs  tools.rs
crates/sandevistan-core/src/provider/: format.rs  http.rs  parser.rs  stream.rs  text.rs
crates/sandevistan-core/src/runtime/: budget.rs  cancel.rs  loop_runner.rs  messages.rs  mod.rs  prompt.rs  stream.rs  types.rs
docs/: extension.md
docs/examples/extensions/rust-greet/: Cargo.toml  extension.toml
docs/scripts/: install-arch-native.sh  install-debian-ubuntu.sh  install-macos.sh
examples/extensions/hello/: extension.toml  index.mjs
packaging/arch/: PKGBUILD
packaging/linux/: install.sh  sandevistan  uninstall.sh
scripts/: install-arch-native-v2.sh  install-arch-native.sh  install-arch-pkgbuild.sh  install-linux-appimage.sh
src/: App.svelte  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  ai.rs  command_utils.rs  context.rs  extensions.rs  files.rs  lib.rs  main.rs  mcp.rs  provider.rs  runtime_wire.rs  shell.rs  subagent.rs  tools.rs  watcher.rs  workspace_tools.rs
src-tauri/src/agent/: mod.rs  types.rs
src-tauri/src/ai/: mod.rs  runtime.rs  store.rs  types.rs
src-tauri/src/extensions/: config.rs  external.rs  hooks.rs  manifest.rs  mcp.rs  mod.rs  protocol.rs  scaffold.rs  skills.rs
src-tauri/src/runtime/: context.rs  events.rs  loop_runner.rs  messages.rs  mod.rs  tool_exec.rs  tool_validation.rs  types.rs
src-tauri/src/tools/: constants.rs  entries.rs  executors.rs  fs_ops.rs  git_ops.rs  mod.rs  path_utils.rs  registry.rs  rtk.rs  schema.rs  search.rs  shell.rs  types.rs  validation.rs
src/components/: AppHeader.svelte  AppSidebar.svelte  ChatPanel.svelte  Checkbox.svelte  DiffPane.svelte  EditorPane.svelte  FileTree.svelte  ItemList.svelte  MessageView.svelte  Modal.svelte  SelectBox.svelte  ToolGroup.svelte  bindElement.ts
src/components/chat/: MessageView.svelte  ToolGroup.svelte
src/components/files/: FileTree.svelte
src/components/ui/: ItemList.svelte  SelectBox.svelte
src/lib/: api.ts  defaults.ts
src/panels/: AppHeader.svelte  AppSidebar.svelte  ChatPanel.svelte  DiffPane.svelte  EditorPane.svelte  TerminalPane.svelte
src/panels/modals/: RenameModal.svelte  WorkspaceModal.svelte
(+1 files in other folders)
