[package]
name = "sandevistan"
version = "1.8.0"
description = "Minimal coding agent harness"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sandevistan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["time", "sync", "macros", "process", "io-util"] }
portable-pty = "0.8"
ignore = "0.4"
notify = "6"
sandevistan-core = { path = "../crates/sandevistan-core" }
tauri-plugin-dialog = "^2"

[profile.dev]
debug = 0
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

